# embed_user_alg

./: .gitignore  README.md  Как организовать исполнение пользовательских алгоритмов в устройстве на микроконтроллере.docx  статьи.txt
OS/: .cproject  .project
OS/Debug/: OS.axf  OS.map  makefile  sources.mk
OS/Debug/board/: board.su  clock_config.su  pin_mux.su  subdir.mk
OS/Debug/device/: subdir.mk
OS/Debug/drivers/: fsl_cmt.su  fsl_dac.su  fsl_dmamux.su  fsl_dspi.su  fsl_dspi_edma.su  fsl_edma.su  fsl_enet.su  fsl_flexbus.su  fsl_flexcan.su  fsl_ftm.su  fsl_i2c.su  fsl_lmem_cache.su  fsl_lptmr.su  fsl_lpuart.su  fsl_lpuart_edma.su  fsl_pit.su  fsl_pmc.su  fsl_rnga.su  fsl_rtc.su  fsl_sai.su  fsl_sdhc.su  fsl_tsi_v4.su  fsl_uart.su  fsl_uart_edma.su  fsl_vref.su  (+1 more)
OS/source/: OS.cpp  os_header.c  os_header.h
OS/startup/: OS_Debug.ld
OS/supply/gen_crc/project/: CMakeLists.txt  FirmwareFileHandler.cpp  HexHandler.cpp  HexHandler.h  README.md
boot/: .cproject  .project
boot/Debug/: boot.axf  boot.map  makefile
boot/source/: boot.c  boot_header.c  boot_header.h  crc_check.c  mk_crc.c  mk_crc.h  mk_flash.c  mk_flash.h  mk_watchdog.c  mk_watchdog.h  return_code.h  watchdog.c
boot/startup/: boot_Debug.ld
embed_user_alg_os/: .cproject  .project  MK66F18_Project JLink Debug.launch
embed_user_alg_os/Debug/: MK66F18_Project.axf  MK66F18_Project.map  MK66F18_Project_Debug.ld  MK66F18_Project_Debug_library.ld  MK66F18_Project_Debug_memory.ld  embed_user_alg_os.axf  embed_user_alg_os.map  makefile  sources.mk
embed_user_alg_os/source/: MK66F18_Project.cpp
(+96 files in other folders)
